# kingo-linux-vpn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod  go.sum  run.sh
.backup_kingo_ui_20260720-023910/: vpncontroller.cpp.bak  vpncontroller.h.bak
.backup_kingo_ui_20260720-024707/: vpncontroller.h.bak
.github/workflows/: ci.yml  release.yml
cmd/kingo-linux-vpn/: main.go
cmd/kingo-linux-vpn-daemon/: main.go
cmd/kingo-linux-vpn-ui/: main.go
deploy/: kingo-daemon.service  kingo-linux-vpn.desktop
docs/: ARCHITECTURE.md  PACKAGING.md  QT_QML.md  UI.md
internal/config/: appconfig.go  config.go  generator.go
internal/core/: ipc_server.go  manager.go  runner.go  xray_config.go
internal/daemon/: daemon.go  ipc.go
internal/daemonclient/: client.go
internal/fetcher/: fetcher.go  fetcher_test.go  http_fetcher.go
internal/ipc/: server.go
internal/model/: models.go  server.go
internal/network/: ping.go
internal/storage/: crypto.go  sqlite.go  store.go
internal/version/: version.go
packaging/: kingo-linux-vpn-tray.service  kingo-linux-vpn.desktop
packaging/appimage/: AppRun  kingo-linux-vpn.desktop
packaging/desktop/: kingo-linux-vpn-autostart.desktop
packaging/systemd/: kingo-linux-vpn.service
packaging/systemd/user/: kingo-linux-vpn-daemon.service  kingo-linux-vpn-ui.service
qt/: CMakeLists.txt  README.md  appcore.cpp  appcore.h  ipcclient.cpp  ipcclient.h  main.cpp  main.qml  resources.qrc  trayicon.cpp  trayicon.h  vpncontroller.cpp  vpncontroller.h
qt/qml/: Main.qml
qt/qml/components/: ActionButton.qml  InfoCard.qml  ServerRow.qml
qt/src/: appcontroller.cpp  appcontroller.h  main.cpp
qt/src/models/: serverlistmodel.cpp  serverlistmodel.h
scripts/: build-appimage.sh  build-release.sh  install.sh  mock-daemon.go  mock_daemon.go  setup-tray.sh
scripts/qt/: ipcclient.h
ui/: README.md
